--- a/Data_Science_Project_pynb (1).ipynb
+++ b/Data_Science_Project_pynb (1).ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 1,
       "metadata": {
         "id": "C0_inPGFZA2-",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ee171c43-0fa2-4b28-ee34-861e4704b903"
+        "outputId": "1c917df8-7efd-4d5f-fb3d-2f7e220dc7eb"
       },
       "outputs": [
         {
@@ -44,7 +44,7 @@
             "Requirement already satisfied: pytz>=2020.1 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.2->seaborn) (2024.2)\n",
             "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/dist-packages (from pandas>=1.2->seaborn) (2024.2)\n",
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -52,10 +52,10 @@
         "!pip install seaborn\n",
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "git_token=\"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\"\n",
+        "\n",
         "username=\"merlis11\"\n",
         "repository=\"titanic\"\n",
-        "#version1"
+        "#version4"
       ]
     },
     {
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "O7AchFd1Z3TB"
       },
-      "execution_count": 104,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 226
         },
-        "outputId": "942b48cc-80d4-4648-d30b-fb0bed74ac00"
+        "outputId": "287b3090-b7a4-42cb-93d4-06a87a6af0ea"
       },
-      "execution_count": 105,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +141,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-747e8cbc-f62d-4e6e-9acc-6eb63bf93192\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-69d8b992-6619-46ae-8038-6c1a2bab598e\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -274,7 +274,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-747e8cbc-f62d-4e6e-9acc-6eb63bf93192')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-69d8b992-6619-46ae-8038-6c1a2bab598e')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -326,12 +326,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-747e8cbc-f62d-4e6e-9acc-6eb63bf93192 button.colab-df-convert');\n",
+              "        document.querySelector('#df-69d8b992-6619-46ae-8038-6c1a2bab598e button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-747e8cbc-f62d-4e6e-9acc-6eb63bf93192');\n",
+              "        const element = document.querySelector('#df-69d8b992-6619-46ae-8038-6c1a2bab598e');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -351,8 +351,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-b8d1d35d-73d8-413d-9bef-53a42b9bb2c7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b8d1d35d-73d8-413d-9bef-53a42b9bb2c7')\"\n",
+              "<div id=\"df-77cbaf85-aaf7-4fa5-858a-428beae37d46\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-77cbaf85-aaf7-4fa5-858a-428beae37d46')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -471,7 +471,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-b8d1d35d-73d8-413d-9bef-53a42b9bb2c7 button');\n",
+              "        document.querySelector('#df-77cbaf85-aaf7-4fa5-858a-428beae37d46 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -488,7 +488,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 105
+          "execution_count": 3
         }
       ]
     },
@@ -532,9 +532,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 554
         },
-        "outputId": "c05b8c5a-4b4d-459e-cd5d-38e7711e0457"
+        "outputId": "4065c9e4-63ad-4e9f-de8d-9411bf77f334"
       },
-      "execution_count": 106,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -646,7 +646,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 106
+          "execution_count": 4
         }
       ]
     },
@@ -656,7 +656,7 @@
       "metadata": {
         "id": "kN8nslGgaoJJ"
       },
-      "execution_count": 106,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -699,22 +699,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 469
         },
-        "outputId": "04058571-63ee-4d3c-838c-0f3f4ae984e4"
+        "outputId": "29a77681-5b17-4ec8-de6f-e2853ca0e200"
       },
-      "execution_count": 107,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-107-1a7edfa8703b>:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "<ipython-input-5-1a7edfa8703b>:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
             "\n",
             "\n",
             "  titanic['age'].fillna(titanic['age'].median(), inplace=True)\n",
-            "<ipython-input-107-1a7edfa8703b>:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "<ipython-input-5-1a7edfa8703b>:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -743,7 +743,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-d8b8cbf2-1148-4fe4-9364-9b2ba8368ad5\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8e9fc6f9-5367-4dc2-b798-208650cd6fd9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -870,7 +870,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d8b8cbf2-1148-4fe4-9364-9b2ba8368ad5')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8e9fc6f9-5367-4dc2-b798-208650cd6fd9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -922,12 +922,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-d8b8cbf2-1148-4fe4-9364-9b2ba8368ad5 button.colab-df-convert');\n",
+              "        document.querySelector('#df-8e9fc6f9-5367-4dc2-b798-208650cd6fd9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-d8b8cbf2-1148-4fe4-9364-9b2ba8368ad5');\n",
+              "        const element = document.querySelector('#df-8e9fc6f9-5367-4dc2-b798-208650cd6fd9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -947,8 +947,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-3b5caec5-627c-43e5-a14d-eb5285c9eebd\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-3b5caec5-627c-43e5-a14d-eb5285c9eebd')\"\n",
+              "<div id=\"df-b44cd1cf-3a12-47c4-a3d3-28814984e709\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b44cd1cf-3a12-47c4-a3d3-28814984e709')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1067,7 +1067,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-3b5caec5-627c-43e5-a14d-eb5285c9eebd button');\n",
+              "        document.querySelector('#df-b44cd1cf-3a12-47c4-a3d3-28814984e709 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1084,7 +1084,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 107
+          "execution_count": 5
         }
       ]
     },
@@ -1120,9 +1120,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "39de962c-868d-45fd-928f-35e6de9bcefa"
+        "outputId": "6df49c5e-df63-48ef-92aa-6cd5d79716d1"
       },
-      "execution_count": 108,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1160,9 +1160,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "3a987a29-da5c-45cb-dcc2-a8ada345893a"
+        "outputId": "c83d0692-5259-454b-c0ee-ae6278c4680b"
       },
-      "execution_count": 109,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1192,9 +1192,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "4284d909-6832-4759-9218-2504fcba9dce"
+        "outputId": "9d9075df-00a8-461c-e049-2d2a46ae90cc"
       },
-      "execution_count": 110,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1224,9 +1224,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "c1905a45-9bc0-4e8b-ec43-47203e45d08a"
+        "outputId": "6cb774c2-ee30-4579-ebe8-1ceee2116404"
       },
-      "execution_count": 111,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1256,9 +1256,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 480
         },
-        "outputId": "51c2db22-102a-42d8-d6ea-2fbe1f3014f3"
+        "outputId": "5aae1b44-0157-431f-c71f-1e6716f700f9"
       },
-      "execution_count": 112,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1322,13 +1322,13 @@
       ],
       "metadata": {
         "id": "dobUP3mMb7Og",
-        "outputId": "5432a0cd-bba9-44c4-ae64-4150e991a7b0",
+        "outputId": "db907e20-5836-45f0-ecdf-d1aad85cbfb4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": 113,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1350,7 +1350,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-673a465c-230c-4c49-9163-0c7b6af97ee7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1d46fca4-ea7b-447c-ba8f-210138bd5095\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1459,7 +1459,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-673a465c-230c-4c49-9163-0c7b6af97ee7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1d46fca4-ea7b-447c-ba8f-210138bd5095')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1511,12 +1511,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-673a465c-230c-4c49-9163-0c7b6af97ee7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1d46fca4-ea7b-447c-ba8f-210138bd5095 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-673a465c-230c-4c49-9163-0c7b6af97ee7');\n",
+              "        const element = document.querySelector('#df-1d46fca4-ea7b-447c-ba8f-210138bd5095');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1536,8 +1536,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-ebc9d55f-950a-4051-8075-b6ac3429bfde\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ebc9d55f-950a-4051-8075-b6ac3429bfde')\"\n",
+              "<div id=\"df-6dd1d9ed-905f-4c79-aee7-677cb0205aab\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6dd1d9ed-905f-4c79-aee7-677cb0205aab')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1656,7 +1656,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-ebc9d55f-950a-4051-8075-b6ac3429bfde button');\n",
+              "        document.querySelector('#df-6dd1d9ed-905f-4c79-aee7-677cb0205aab button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1673,7 +1673,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 113
+          "execution_count": 11
         }
       ]
     },
@@ -1713,7 +1713,7 @@
       "metadata": {
         "id": "us4_XZx9-IYk"
       },
-      "execution_count": 114,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1755,9 +1755,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SLzF64O5-xme",
-        "outputId": "a000a109-979e-4c1b-a9a3-2753aa3a5795"
+        "outputId": "f5857b99-5e74-4fb8-dc11-e3ab2b548da7"
       },
-      "execution_count": 115,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1804,7 +1804,7 @@
       "metadata": {
         "id": "oJY57MF6_na7"
       },
-      "execution_count": 116,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1866,9 +1866,9 @@
           "height": 671
         },
         "id": "bx5JXQixALGD",
-        "outputId": "46ac1ac9-434b-4009-d410-9fca23fff627"
+        "outputId": "7d64f7f3-ba12-462f-b723-6d1c2d710d01"
       },
-      "execution_count": 117,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1941,7 +1941,7 @@
       "metadata": {
         "id": "Kg4Bmf6sR-b9"
       },
-      "execution_count": 118,
+      "execution_count": 16,
       "outputs": []
     },
     {
